Updated logics in JS

--- a/index.html
+++ b/index.html
@@ -71,5 +71,14 @@
         <h2 id="alert-title-1">You already have this feature.</h2>
         <button id="alert-button-close-4" class="button1">Close</button>
     </div>
+
+    <!-- Custom alert box 5 -->
+    <div id="custom-alert-5">
+        <h2 id="alert-title-1">Do you wish to restart your cookies?</h2>
+        <div id="alert-buttons-5"></div>
+            <button id="alert-button-yes-5" class="button1">Yes</button>
+            <button id="alert-button-no-5" class="button1">No</button>
+        </div>
+    </div>
 </body>
 </html> 
